--- a/Frontend/elearning/src/App.css
+++ b/Frontend/elearning/src/App.css
@@ -3,4 +3,178 @@ body{
     padding: 0;
 }
 
+/* course block */
+.coursesToBuy {
+    display: grid;
+    grid-template-columns: 20% 60% 15%;
+    column-gap: 10px;
+    border-bottom: 1px solid rgba(211, 211, 211, 0.658);
+    padding-bottom: 15px;
+    cursor: pointer;
+  
+    margin-bottom: 15px;
+  }
+  
+  .courseTitle {
+    font-size: 20px;
+    color: rgb(59, 59, 59);
+  }
+  
+  .courseOwner {
+    font-size: 13px;
+    color: #73726c;
+    font-weight: 500;
+  }
+  
+  .coursesToBuy img {
+    position: relative;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  
+  .coursesInformation p {
+    color: #73726c;
+  }
+  
+  .coursesToBuy:hover .coursesPhoto1 {
+    filter: rgb(92, 92, 92);
+    -webkit-filter: grayscale(60%);
+    transition: all 0.2s linear;
+  }
+  
+  .coursesPrice {
+    display: grid;
+    font-size: 18px;
+    font-weight: 600;
+    font-style: oblique;
+    justify-content: end;
+    grid-template-rows: 25%;
+  }
+  
+  .nouveauPrice {
+    font-weight: 700;
+  }
+  
+  .ancienPrice {
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: line-through;
+    color: rgb(107, 107, 107);
+  }
 
+  /* course title */
+span.back {
+  display: inline-block;
+  padding: 10px;
+  color: white;
+  background-color: #3498db;
+  border-radius: 4px;
+  text-decoration: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+span.back:hover {
+  background-color: #2980b9;
+}
+h1.title {
+  color: #333;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+h5.teacher {
+  color: #777;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+  /* course details */
+  .header_course{
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    justify-content: space-between;
+    height: 400px;
+    align-items:flex-start;
+    margin-bottom: 30px;
+  }
+  .details{
+    border: 1;
+    background-color: rgb(233, 242, 250);
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+  }
+  .course_img img{
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+  .course_img{
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* review section */
+  .comment-box {
+    display: flex;
+    align-items: flex-start;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .user-details {
+    flex: 1;
+  }
+  
+  .user-name {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .rating {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+  }
+  
+  .star {
+    color: gold;
+    margin-right: 2px;
+  }
+  
+  .comment {
+    font-size: 14px;
+  }
+
+  /* classRoom section */
+  .header_classroom{
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    justify-content: space-between;
+    height: 200px;
+    align-items:flex-start;
+    margin-bottom: 30px;
+  }
+  .lesson_content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 300px;
+    width: 100%;
+    background-color: #efe9e9;
+    border-radius: 10px;
+    margin: 20px 0;
+    padding: 15px;
+  }
+.lesson_video YouTube,video{
+border-radius: 10px;
+}
