--- a/Frontend/elearning/src/components/footer/footer.css
+++ b/Frontend/elearning/src/components/footer/footer.css
@@ -1,109 +1,4 @@
-.footer {
-  margin-top: 10%;
-  position: relative;
-  /* top: 600px; */
-  height: fit-content;
-  display: grid;
-  background-color: #373737;
-}
-.subfooter {
-  font-weight: 600;
-  height: fit-content;
-  background: #252525;
-  color: #fff;
-  padding: 20px;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  /* justify-items: center; */
-  text-align: center;
-}
-.Payment_methods {
-  font-weight: 600;
-  border-right: 1px #fff solid;
-  justify-self: center;
-  padding-right: 85px;
-  /* margin :10px 30px; */
-}
-.payement_method {
-  object-fit: contain;
-  width: 90px;
-  height: 35px;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-left: 5px;
-  filter: gray; /* IE6-9 */
-  -webkit-filter: grayscale(60%);
-  transition: filter 0.3s linear 0.3s;
-  cursor: pointer;
-}
 
-.main_footer {
-  padding: 20px;
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
-.footer_logo {
-  cursor: pointer;
-  object-fit: contain;
-  width: 120px;
-  height: 35px;
-  justify-self: center;
-  filter: gray;
-  -webkit-filter: grayscale(100%);
-  transition: filter 0.3s linear 0.3s;
-}
-.footer_logo:hover,
-.payement_method:hover {
-  filter: none; /* IE6-9 */
-  -webkit-filter: grayscale(0%);
-}
-.footer ul {
-  margin: 10px 30px;
-  list-style: none;
-  font-size: 15px;
-  font-weight: 500;
-  border-right: 1px #fff solid;
-  color: #fff;
-}
-li {
-  margin: 20px 00px;
-}
-.socialmedia_links {
-  text-align: center;
-}
-.socialmedia_links div {
-  margin-top: 20px;
-}
-.social_icons {
-  cursor: pointer;
-  object-fit: contain;
-  height: 30px;
-  margin-left: 20px;
-  filter: gray; /* IE6-9 */
-  -webkit-filter: grayscale(30%);
-  transition: filter 0.3s linear 0.3s;
-}
-.social_icons:hover {
-  filter: none; /* IE6-9 */
-  -webkit-filter: grayscale(0%);
-}
-
-.get_in_contact h1,
-.socialmedia_links h1 {
-  color: #fff;
-  font-weight: 600;
-  font-size: 19px;
-  text-align: center;
-}
-
-.logo_copyright {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  color: #fff;
-}
-.copyright {
-  align-self: center;
-  text-align: center;
-}
 @media screen and (max-width: 768px) {
   .Payment_methods {
     border: none;
@@ -122,4 +17,71 @@ li {
     margin-bottom: 2px;
     width: 80px;
   }
+}
+.footer-basic {
+  padding:40px 0;
+  background-color:#ffffff;
+  color:#4b4c4d;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:12px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+  margin-bottom:0;
+}
+.socialMedia{
+  display: flex;
+  justify-content: center;
+}
+.socialMedia path:hover{
+  fill:#8d80cb;
+  cursor: pointer;
 }
