--- a/Frontend/elearning/src/pages/Home.css
+++ b/Frontend/elearning/src/pages/Home.css
@@ -1,72 +1,198 @@
 
 .welcome-section {
-    background-image: url('../assets/home1.jpg');
-    background-size: cover;
-    margin-top: -100px;
-    height: 120vh;
-    width: 100%;
-  }
-  .welcome{
-    padding-top: 100px;
-    display: flex;
-    justify-content: space-around;
-  }
-  .welcome_text{
-    margin-top: 60px;
-    margin-left: 20px;
-    font-size: 40px;
-    font-family:sans-serif;
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 1.2;
-    max-width: 500px;
-  }
+  background-image: url('../assets/home1.jpg');
+  background-size: cover;
+  margin-top: -100px;
+  height: 120vh;
+  width: 100%;
+}
+.welcome{
+  padding-top: 200px;
+  display: flex;
+  justify-content: space-around;
+}
+.welcome_text{
+  /* margin-top: 60px; */
+  margin-left: 20px;
+  font-size: 40px;
+  font-family:sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1.2;
+  max-width: 500px;
+}
 
-  .welcome_img{
-    margin-top: 50px;
-    margin-right: -40px;
-  }
+.welcome_img{
+  margin-top: 0px;
+  margin-right: -40px;
+}
 
-  .search input {
-    padding: 7px 10%;
-    border-radius: 20px;
-    width: 500px;
-    height: 60px;
-  }
-  .search {
-    border: 1px solid #17bf9d44;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.search input {
+  /* padding: 7px 10%; */
+  width: 500px;
+  height: 60px;
+  outline:none;
+}
+.search {
+background-color: white;
+ border-radius: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .stat{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 10px;
-  }
+.stat{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: -50px 60px 70px 60px;
 
-  .tag_title{
+}
+
+.tag_title{
 display: flex;
 justify-content: space-around;
 margin-top: 30px;
-  }
-  .tag_card{
-    display: flex;
-    justify-content: space-around;
-    margin: 10px;
-      }
+}
+.tag_card{
+  display: flex;
+  justify-content: space-around;
+  margin: 10px;
+    }
 
-  .course_title{
+.course_title{
 display: flex;
 justify-content: space-around;
 margin-top: 30px;
-  }
-  .course_card{
-    display: flex;
-    justify-content: space-around;
-    margin: 10px;
-      }
+}
+.course_card{
+  display: flex;
+  justify-content: space-around;
+  margin: 10px;
+    }
 
-  
+.stat-Box{
+  display: flex;
+  gap:10px;
+  border: #eae7e7 1px solid;
+  width: 265px;
+  height: 140px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  box-shadow: 0px 13px 24px -7px #eae7e7;
+transition: all 0.3s ease-in-out;
+&:hover {
+  box-shadow: 0px 17px 16px -11px #b4a7f5;
+  transform: translateY(-5px);}
+  background-color: white;
+}
+.btnn{
+  background-color: white;
+  border: #b4a7f5 solid 3px;
+  border-radius: 30px;
+  color:#685F78;
+  width: 160px!important;
+  height: 50px;
+  margin-left: 50px;
+  &:hover{
+    background-color: #b4a7f5;
+    border: none;
+  }
+}
+.cat-box{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  border: #eae7e7 1px solid;
+  width: 270px;
+  height: 250px;
+  padding: 25px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0px 13px 24px -7px #eae7e7;
+transition: all 0.3s ease-in-out;
+&:hover {
+  background-color:#37305b;
+color:white;}
+
+}
+.best-cat{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:20px;
+  margin-bottom: 80px;
+}
+.best-courses{
+  background-image: url('../assets/banner.png');
+  background-size: cover;
+  height: 180vh;
+  width: 100%;
+  padding: 20px;
+}
+.course-box{
+  margin:20px;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  border: #eae7e7 1px solid;
+  width: 360px;
+  height: 500px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0px 13px 24px -7px #eae7e7;
+transition: all 0.3s ease-in-out;
+background-color: white;
+&:hover {
+  background-color:#37305b;
+color:white!important;}
+}
+.btn8{
+  background-color: #FF6575;
+  border-radius: 30px;
+  color:white;
+  width: 100px!important;
+  height: 40px;
+  margin-left: 200px;
+  border:none;
+  &:hover{
+    background-color: white;
+    color: #FF6575;
+    border: 3px solid #FF6575;;
+  }
+ 
+}
+.zoom{
+  transition: transform 2s;
+}
+.zoom:hover{
+  transform: scale(1.5);
+}
+.inst-box{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  border: #eae7e7 1px solid;
+  width: 270px;
+  height: 290px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0px 13px 24px -7px #eae7e7;
+  transition: transform 2s;
+
+  &:hover{
+    transform: scale(1.2);
+  }
+}
+.inst-box img{
+  width:100%;
+  height: 80%;
+  object-fit: fill;
+  overflow: hidden;
+  border-radius: 10px;
+
+}
